# WeatherSDK

./: .gitignore  PUBLISHING.md  README.md
.github/workflows/: sdk-release.yml
backend/: .env.example  README.md  render.yaml
backend/app/: config.py  main.py  models.py
backend/app/services/: air_quality_service.py  climate_service.py  elevation_service.py  flood_service.py  historical_service.py  marine_service.py  solar_service.py  weather_service.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/elevation/: page.tsx
frontend/app/(app)/historical/: page.tsx
frontend/app/(app)/map/: page.tsx
frontend/app/(app)/saved/: page.tsx
frontend/app/(app)/settings/: page.tsx
frontend/app/about/: page.tsx
frontend/app/api/debug/: route.ts
frontend/app/docs/: page.tsx
frontend/app/features/: layout.tsx  page-new.tsx  page-old-backup.tsx  page.tsx
frontend/app/historical/: page.tsx
frontend/app/weather/: page.tsx
frontend/components/animations/: scroll-reveal.tsx
frontend/components/layout/: AppSidebar.tsx  Header.tsx  Navbar.tsx  ThemeWrapper.tsx
frontend/components/visuals/: Lightning.tsx  MagicBento.tsx  RippleGrid.tsx
frontend/components/weather/: ForecastList.tsx  HighlightsGrid.tsx  HourlyForecastChart.tsx  MainWeatherCard.tsx  WeatherDashboard.tsx  air-quality-card.tsx  climate-card.tsx  current-weather-card.tsx  elevation-card.tsx  flood-card.tsx  forecast-cards.tsx  historical-chart.tsx  marine-conditions-card.tsx  solar-radiation-card.tsx  weather-hero.tsx
frontend/context/: LocationContext.tsx  WeatherThemeContext.tsx
frontend/lib/: api.ts
sdk/: PUBLISHING_GUIDE.md  QUICK_PUBLISH.md
sdk/python/: README.md  pyproject.toml
sdk/python/adiyogi_weather/: __init__.py  client.py  exceptions.py
sdk/python/adiyogi_weather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/adiyogi_weather/models/: air_quality.py  climate.py  elevation.py  ensemble.py  flood.py  geocoding.py  historical.py  historical_forecast.py  marine.py  seasonal.py  solar.py  weather.py
sdk/python/adiyogi_weather/services/: __init__.py  air_quality.py  base.py  climate.py  elevation.py  ensemble.py  flood.py  geocoding.py  historical.py  historical_forecast.py  marine.py  seasonal.py  solar.py  weather.py
sdk/python/adiyogi_weather/utils/: export.py  validators.py
sdk/python/examples/: basic_test.py  test_all_services.py  test_climate.py  test_complete_sdk.py  test_ensemble.py  test_final_services.py  test_historical_forecast.py  test_pandas.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts
sdk/typescript/src/services/: air-quality.ts  base.ts  climate.ts  elevation.ts  ensemble.ts  flood.ts  geocoding.ts  historical.ts  (+5 more)
(+1 files in other folders)
