[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adiyogi-weather"
version = "1.0.0"
description = "A comprehensive Python SDK for Adiyogi Weather API - High-precision weather, climate, and environmental data"
authors = [
  { name = "Adiyogi Weather", email = "support@adiyogi.com" },
]
readme = "README.md"
license = { text = "MIT" }
urls.Homepage = "https://github.com/ArchishmanS2005/WeatherSDK"
urls.Documentation = "https://github.com/ArchishmanS2005/WeatherSDK#readme"
urls.Repository = "https://github.com/ArchishmanS2005/WeatherSDK"
urls."Bug Tracker" = "https://github.com/ArchishmanS2005/WeatherSDK/issues"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
    "weather",
    "sdk",
    "adiyogi",
    "climate",
    "forecast",
    "meteorology",
    "air-quality",
    "environmental-data",
    "async",
    "httpx",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
pandas = [
    "pandas>=2.0.0",
]
all = [
    "pandas>=2.0.0",
]
